* create API functions to access link information values
* add libfvalue

API
* add functions
  - for icon location block ?
  - for special and/or known folder identifier
* remove liblnk_file_get_link_target_identifier_data

Release:
* check TODOs
* configure
 - check inclusion local library functions
* update manuals
* automated tests
  - 2x open/close (bfio and normal)

Bindings:
* .net
* java

20130923
* updated dependencies

20130829
* worked on automated tests
* corrected versions in change log

20130815
* change to API to expose link target identifier data

20130806
* fixes for building with stand-alone libuna and libbfio

20130805
* updated dependencies
* bug fix in pymsiecf file object libbfio glue code

20130626
* worked on shell items
  - detection of delegate 0x2e item
* fix in debug output for local path

20130421
* worked on tests

20130416
* code clean up

20130414
* textual changes

20130413
* updated dependencies
* moved examples to project site
* updated lnkinfo man page
* worked on tests
* fixed codepage 1255 restriction
* updates and bug fixes in pylnk

20130409
* fixed codepage 949 and 950 restriction

20130319
* updated dependencies

20130303
* added PackageMaker files
* added functions to retrieve drive type, drive serial number and volume label
* fix trailing \ for local and network path when common path is an emtpy string

20130202
* improved handling of link information flags for Windows 95 LNK file
* updated libfwsi

20130117
* fixed issue in lnkinfo where date and time values were not printed
  when location info flag was not set

20130116
* 2013 update
* updated dependencies
* updated pylnk
* bug fixes in lnktools
* bug fixes in pylnk

20121205
* changes to msvscpp files for visual studio 2010 build

20121121
* update for missing path separator in network path
* updated msvscpp files

20121120
* update for missing path separator in network path

20121104
* pylnk: fixes for 32-bit build

20121103
* pylnk: bug fixes
* updated dependencies